--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -6,6 +6,9 @@ $clr4: #95adbe;
 $clr5: #dff0ea;
 $clr6: #fff;
 
+// Background
+$tw-bg-opacity: 1;
+
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
