--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -11,8 +11,4 @@
 // Views
 @import "views/home-page";
 @import "views/resume-app";
-@import "views/sign-up";
-
-.red {
-    background-color: red;
-}
+@import "views/login";
