--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -13,4 +13,7 @@
 // Views
 @import 'views/home-page';
 @import 'views/resume-app';
-@import 'views/login';
+@import 'views/login-page';
+
+// components
+@import 'views/modal';
