--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -24,3 +24,9 @@ $inner-wide-breakpoint: 1000px;
 
 // Padding
 $desktop-padding: 24px;
+
+// Modal
+$modal-z-index: 20;
+$modal-overlay-z-index: 10;
+$modal-border-radius: 20px;
+$modal-width: 500px;
