--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -6,7 +6,8 @@ body {
 	line-height: 1;
 	margin: 0;
 	font-family: 'proxima-nova';
-	background-color: rgb(243 244 (calc(246 / $tw-bg-opacity)));
+	background-color: $bg-color;
+	color: $primary-color;
 }
 
 h1,
@@ -21,7 +22,16 @@ p {
 
 a {
 	text-decoration: none;
+	color: inherit;
+
+	@media (hover:hover) {
+		&:hover {
+			color: inherit;
+		}
+	}
 }
+
+
 
 ul {
 	list-style-type: none;
@@ -35,6 +45,6 @@ button {
 }
 
 ::selection {
-	background-color: $clr1;
-	color: $clr6;
+	background-color: black;
+	color: white;
 }
