--- a/src/assets/scss/views/_home-page.scss
+++ b/src/assets/scss/views/_home-page.scss
@@ -13,17 +13,6 @@
             align-items: center;
             justify-content: space-between;
             width: 100%;
-
-            .login {
-                .login-btn {
-                    width: 200px;
-                    height: 40px;
-                    border-radius: 2em;
-                    font-weight: 700;
-                    font-size: rem(16px);
-                }
-            }
-
         }
     }
 
@@ -36,15 +25,100 @@
         align-items: center;
         justify-content: space-between;
 
+        .content {
+            h1 {
+                line-height: 1;
+                font-weight: 800;
+                font-size: rem(60px);
+                margin-bottom: 16px;
+                color: $primary-color;
+            }
+
+            h3 {
+                font-size: rem(22px);
+            }
+        }
+
 
         .hero-img {
-            width: 20%;
+            width: 30%;
+
+            img {
+
+                width: 100%;
+            }
         }
     }
 
     .resume-list-container {
         max-width: $inner-wide-breakpoint;
         margin: auto;
+
+        .resume-list-header {
+            h2 {
+                font-weight: 700;
+                font-size: rem(36px);
+                margin-bottom: 12px;
+            }
+
+            p {
+                font-size: rem(18px);
+                margin-bottom: 24px;
+            }
+        }
+
+        .resume-list {
+            display: flex;
+            gap: 12px;
+            flex-direction: column;
+
+            .resume-preview-add,
+            .resume-preview {
+                a {
+                    display: flex;
+                    align-items: center;
+                    border-radius: 1em;
+                    height: 80px;
+                    padding-inline: 24px;
+
+                    .resume-info {
+                        display: flex;
+                        gap: 12px;
+                        align-items: center;
+
+                        .resume-icon {
+                            svg {
+                                fill: $primary-color;
+                                height: 40px;
+                                width: 40px;
+                            }
+                        }
+
+                        .resume-title {
+                            font-size: rem(24px);
+                            font-weight: 600;
+                            color: $primary-color;
+
+                        }
+                    }
+                }
+            }
+
+            .resume-preview {
+                a {
+                    padding-inline: 48px;
+
+                    background-color: white;
+                    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+                }
+            }
+
+            .resume-preview-add {
+                a {
+                    border: 1px dashed lighten($secondary-color, 50%);
+                }
+            }
+        }
 
     }
 }
