resume page start

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -16,4 +16,5 @@
 @import 'views/login-page';
 
 // Components
-@import 'views/modal';
+@import 'components/modal';
+@import 'components/resume-form';
