design of first part at builder

--- a/src/assets/scss/views/_resume-app.scss
+++ b/src/assets/scss/views/_resume-app.scss
@@ -9,7 +9,7 @@
 
     .a4-resume {
         flex-basis: 50%;
-        background-color: black;
+        background-color: white;
         aspect-ratio: 1 / 1.414;
     }
 }
