--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -17,3 +17,7 @@
 // Components
 @import 'components/modal';
 @import 'components/resume-form';
+
+// Templates
+@import 'templates/template-no1';
+
