Progress in auth pages

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -17,6 +17,7 @@
 // Components
 @import 'components/modal';
 @import 'components/resume-form';
+@import 'components/auth-form';
 
 // Templates
 @import 'templates/template-no1';
