--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -31,10 +31,8 @@
             align-items: center;
             gap: 6px;
 
-            span {
-                svg {
-                    scale: .8;
-                }
+            img {
+                width: 15px;
             }
 
             p {
