--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -1,25 +1,48 @@
 .template-no1 {
-    padding: 48px;
+    padding: 2vw;
 
-    .title {
+    .personal-info {
         display: flex;
-        gap: 12px;
         align-items: center;
-        flex-wrap: wrap;
-        margin-bottom: 8px;
+        justify-content: space-between;
 
-        h1 {
-            font-size: rem(28px);
-            font-weight: 800;
+
+        .title {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+            flex-wrap: wrap;
+            margin-bottom: 8px;
+            transform-origin: top left;
+
+            h1 {
+                font-size: rem(28px);
+                font-weight: 800;
+            }
+
+            h2 {
+                position: relative;
+                top: 2px;
+                font-size: rem(18px);
+                font-style: italic;
+            }
         }
 
-        h2 {
-            position: relative;
-            top: 2px;
-            font-size: rem(18px);
-            font-style: italic;
+        .img {
+
+            transform-origin: top right;
+
+            img {
+                border-radius: 5em;
+                aspect-ratio: 1 / 1;
+                height: 60px;
+                width: 60px;
+                object-fit: cover;
+            }
         }
+
     }
+
 
     .contact {
         display: flex;
