Fix sizes while resizing pdf

--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -180,5 +180,17 @@
                 color: $txt-color;
             }
         }
+
+        .cancel {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 140px;
+
+            button {
+                color: $primary-color;
+                font-weight: 800;
+            }
+        }
     }
 }
