--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -1,42 +1,75 @@
 .template-no1 {
-    padding: 2vw;
+    padding: 48px;
+    transform-origin: top left;
+
+
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
     .personal-info {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        transform-origin: top left;
 
-
-        .title {
+        .contact {
+            padding-top: .5vw;
             display: flex;
-            gap: 12px;
-            align-items: center;
-            flex-wrap: wrap;
-            margin-bottom: 8px;
+            flex-direction: column;
+            gap: 8px;
             transform-origin: top left;
+            align-items: flex-start;
 
-            h1 {
-                font-size: rem(28px);
-                font-weight: 800;
+            .title {
+                display: flex;
+                // flex-direction: column;
+                align-items: center;
+                flex-wrap: wrap;
+                flex-grow: 1;
+                transform-origin: top left;
+
+                h1 {
+                    transform-origin: top left;
+                    font-size: rem(28px);
+                    font-weight: 800;
+                    margin-inline-end: 12px;
+                }
+
+                h2 {
+                    transform-origin: top left;
+                    position: relative;
+                    top: 2px;
+                    font-size: rem(18px);
+                    font-style: italic;
+                }
             }
 
-            h2 {
-                position: relative;
-                top: 2px;
-                font-size: rem(18px);
-                font-style: italic;
+            .contact-item {
+                transform-origin: top right;
+                display: flex;
+                align-items: center;
+                gap: 6px;
+
+                img {
+                    width: 15px;
+                }
+
+                p {
+                    font-size: rem(13px);
+                }
             }
         }
 
         .img {
-
+            height: 100%;
             transform-origin: top right;
 
             img {
                 border-radius: 5em;
                 aspect-ratio: 1 / 1;
-                height: 60px;
-                width: 60px;
+                max-height: 125px;
                 object-fit: cover;
             }
         }
@@ -44,23 +77,5 @@
     }
 
 
-    .contact {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
 
-        .contact-item {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-
-            img {
-                width: 15px;
-            }
-
-            p {
-                font-size: rem(13px);
-            }
-        }
-    }
 }
