--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -1,36 +1,28 @@
 .template-no1 {
     padding: 48px;
     transform-origin: top left;
-
-
-
     position: absolute;
     width: 100%;
     height: 100%;
 
     .personal-info {
         display: flex;
-        align-items: center;
         justify-content: space-between;
         transform-origin: top left;
 
         .contact {
-            padding-top: .5vw;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
             transform-origin: top left;
-            align-items: flex-start;
 
             .title {
                 display: flex;
-                // flex-direction: column;
                 align-items: center;
                 flex-wrap: wrap;
                 flex-grow: 1;
                 transform-origin: top left;
+                margin-bottom: 16px;
 
                 h1 {
+                    line-height: 1;
                     transform-origin: top left;
                     font-size: rem(28px);
                     font-weight: 800;
@@ -38,6 +30,7 @@
                 }
 
                 h2 {
+                    line-height: 1;
                     transform-origin: top left;
                     position: relative;
                     top: 2px;
@@ -50,14 +43,15 @@
                 transform-origin: top right;
                 display: flex;
                 align-items: center;
-                gap: 6px;
+                gap: 10px;
+                margin-bottom: 10px;
 
                 img {
                     width: 15px;
                 }
 
                 p {
-                    font-size: rem(13px);
+                    font-size: rem(14px);
                 }
             }
         }
