unite to one  store and service

--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -24,10 +24,8 @@ a {
 	text-decoration: none;
 	color: inherit;
 
-	@media (hover:hover) {
-		&:hover {
-			color: inherit;
-		}
+	@include hover {
+		color: inherit;
 	}
 }
 
