--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -6,6 +6,9 @@ $bg-color: #f3f4f6;
 $primary-color: #142850;
 $secondary-color: #27496D;
 $txt-color: #f5eeee;
+$brand-color: #ec008c;
+$secondary-brand-color: #fc6767;
+
 
 // Breakpoints
 $mobile-breakpoint: 460px;
