--- a/src/assets/scss/components/_auth-form.scss
+++ b/src/assets/scss/components/_auth-form.scss
@@ -2,12 +2,12 @@
 	display: flex;
 	flex-direction: column;
 	margin: auto;
-	width: $modal-width;
+	width: 100%;
 	padding: 5rem 4rem;
 	gap: 2rem;
-	border-radius: $modal-border-radius;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-	background-color: $bg-color-modal;
+	// border-radius: inherit;
+	// background-color: transparent;
 	text-align: center;
 
 	h1,
@@ -16,56 +16,36 @@
 		font-weight: 600;
 	}
 
+	a,
+	button {
+		font-weight: 600;
+		color: $txt-color-secondary;
+		
+		@include hover {
+			color: lighten($txt-color-secondary, 30%);
+		}
+	}
+
 	p {
 		color: #00000080;
 		font-weight: 100;
 	}
 
-	a {
-		@include hover {
-			opacity: 0.7;
-		}
-	}
-
-	button {
-		color: $primary-color;
-	}
-
-	input {
-		border: none;
-		border-width: none;
-		border-radius: 0;
-		border-bottom: 2px solid rgb(229, 231, 235);
-		box-shadow: none;
-		font-size: 1.25rem;
-
-		&:focus {
-			box-shadow: none;
+	.form-floating {
+		input {
+			border: none;
+			border-width: none;
+			border-radius: 0;
 			border-bottom: 2px solid rgb(229, 231, 235);
+			box-shadow: none;
+			font-size: 1.25rem;
 		}
-	}
 
-	.floating-label {
-		color: rgb(156 163 175);
-		display: flex;
-		align-items: center;
-		column-gap: 1rem;
-	}
-
-	.forget-password {
-		position: relative;
-		color: black;
-		display: flex;
-		bottom: 2rem;
-		justify-content: left;
-	}
-
-	.sub-checkbox {
-		display: flex;
-		column-gap: 1rem;
-
-		@include hover {
-			opacity: 0.7;
+		.floating-label {
+			color: rgb(156 163 175);
+			display: flex;
+			align-items: center;
+			column-gap: 1rem;
 		}
 	}
 
@@ -77,13 +57,30 @@
 		input {
 			flex: 10;
 			width: 150%;
-			-webkit-text-security: none;
+
+			&::-ms-reveal,
+			&::-ms-clear {
+				display: none;
+			}
 		}
 
 		.password-reveal {
 			z-index: 2;
-			background-color: transparent;
 			font-weight: 700;
+		}
+
+		.forget-password {
+			position: absolute;
+			transform: translateY(4.25rem);
+		}
+	}
+
+	.sub-checkbox {
+		display: flex;
+		column-gap: 1rem;
+
+		@include hover {
+			opacity: 0.7;
 		}
 	}
 
