--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -6,6 +6,7 @@ $bg-color: #f3f4f6;
 $primary-color: #142850;
 $secondary-color: #27496D;
 $txt-color: #f5eeee;
+$txt-color-secondary: #161515;
 $brand-color: #ec008c;
 $secondary-brand-color: #fc6767;
 
