--- a/src/assets/scss/views/_home-page.scss
+++ b/src/assets/scss/views/_home-page.scss
@@ -1,124 +1,128 @@
 .home-page {
+	.home-header {
+		padding-inline: $desktop-padding;
+		display: flex;
+		align-items: center;
+		height: 10vh;
 
-    .home-header {
-        padding-inline: $desktop-padding;
-        display: flex;
-        align-items: center;
-        height: 10vh;
+		.header-wrapper {
+			max-width: $wide-breakpoint;
+			margin: auto;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			width: 100%;
 
-        .header-wrapper {
-            max-width: $wide-breakpoint;
-            margin: auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-        }
-    }
+			.login-btn {
+				padding: 0.5rem 1.5rem;
+				border-radius: 2em;
+				font-weight: 700;
+				font-size: rem(16px);
+				@include btn($primary-color, $secondary-color);
+				color: $txt-color;
+			}
+		}
+	}
 
-    .home-hero {
-        max-width: $inner-wide-breakpoint;
-        padding-block: 48px;
-        margin: auto;
-        display: flex;
-        gap: rem(72px);
-        align-items: center;
-        justify-content: space-between;
+	.home-hero {
+		max-width: $inner-wide-breakpoint;
+		padding-block: 48px;
+		margin: auto;
+		display: flex;
+		gap: rem(72px);
+		align-items: center;
+		justify-content: space-between;
 
-        .content {
-            h1 {
-                line-height: 1;
-                font-weight: 800;
-                font-size: rem(60px);
-                margin-bottom: 16px;
-                color: $primary-color;
-            }
+		.content {
+			h1 {
+				line-height: 1;
+				font-weight: 800;
+				font-size: rem(60px);
+				margin-bottom: 16px;
+				color: $primary-color;
+			}
 
-            h3 {
-                font-size: rem(22px);
-            }
-        }
+			h3 {
+				font-size: rem(22px);
+			}
+		}
 
+		.hero-img {
+			width: 30%;
 
-        .hero-img {
-            width: 30%;
+			img {
+				width: 100%;
+			}
+		}
+	}
 
-            img {
+	.resume-list-container {
+		max-width: $inner-wide-breakpoint;
+		margin: auto;
 
-                width: 100%;
-            }
-        }
-    }
+		.resume-list-header {
+			h2 {
+				font-weight: 700;
+				font-size: rem(36px);
+				margin-bottom: 12px;
+			}
 
-    .resume-list-container {
-        max-width: $inner-wide-breakpoint;
-        margin: auto;
+			p {
+				font-size: rem(18px);
+				margin-bottom: 24px;
+			}
+		}
 
-        .resume-list-header {
-            h2 {
-                font-weight: 700;
-                font-size: rem(36px);
-                margin-bottom: 12px;
-            }
+		.resume-list {
+			display: flex;
+			gap: 12px;
+			flex-direction: column;
 
-            p {
-                font-size: rem(18px);
-                margin-bottom: 24px;
-            }
-        }
+			.resume-preview-add,
+			.resume-preview {
+				a {
+					display: flex;
+					align-items: center;
+					border-radius: 1em;
+					height: 80px;
+					padding-inline: 24px;
 
-        .resume-list {
-            display: flex;
-            gap: 12px;
-            flex-direction: column;
+					.resume-info {
+						display: flex;
+						gap: 12px;
+						align-items: center;
 
-            .resume-preview-add,
-            .resume-preview {
-                a {
-                    display: flex;
-                    align-items: center;
-                    border-radius: 1em;
-                    height: 80px;
-                    padding-inline: 24px;
+						.resume-icon {
+							svg {
+								fill: $primary-color;
+								height: 40px;
+								width: 40px;
+							}
+						}
 
-                    .resume-info {
-                        display: flex;
-                        gap: 12px;
-                        align-items: center;
+						.resume-title {
+							font-size: rem(24px);
+							font-weight: 600;
+							color: $primary-color;
+						}
+					}
+				}
+			}
 
-                        .resume-icon {
-                            svg {
-                                fill: $primary-color;
-                                height: 40px;
-                                width: 40px;
-                            }
-                        }
+			.resume-preview {
+				a {
+					padding-inline: 48px;
 
-                        .resume-title {
-                            font-size: rem(24px);
-                            font-weight: 600;
-                            color: $primary-color;
+					background-color: white;
+					box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+				}
+			}
 
-                        }
-                    }
-                }
-            }
-
-            .resume-preview {
-                a {
-                    padding-inline: 48px;
-
-                    background-color: white;
-                    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-                }
-            }
-
-            .resume-preview-add {
-                a {
-                    border: 1px dashed lighten($secondary-color, 50%);
-                }
-            }
-        }
-
-    }
+			.resume-preview-add {
+				a {
+					border: 1px dashed lighten($secondary-color, 50%);
+				}
+			}
+		}
+	}
 }
