--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -20,16 +20,14 @@
 		margin: auto;
 		background-color: #fff;
 		border-radius: $modal-border-radius;
-		
-		
-	}
-	
-	.fade-enter-active,
-	.fade-leave-active {
-		transition: opacity 0.4s linear;
 	}
 
-	.fade-enter,
+	.fade-enter-active,
+	.fade-leave-active {
+		transition: opacity 0.2s linear;
+	}
+
+	.fade-enter-from,
 	.fade-leave-to {
 		opacity: 0;
 	}
@@ -40,7 +38,7 @@
 			opacity 0.3s linear;
 	}
 
-	.pop-enter,
+	.pop-enter-from,
 	.pop-leave-to {
 		opacity: 0;
 		transform: scale(0.3);
