--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -1,14 +1,17 @@
 .resume-builder {
+    min-width: 550px;
     flex-basis: 50%;
+    z-index: 10;
 
     .resume-header {
         display: flex;
+        align-items: center;
         justify-content: space-between;
         background-color: white;
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         border-radius: 1em;
-        padding-block: 24px;
         padding-inline: 48px;
+        height: 80px;
 
         >* {
             cursor: pointer;
@@ -60,14 +63,14 @@
         margin-block: 24px;
         overflow: hidden;
         padding-block-end: 24px;
-        height: 96px;
+        height: 80px;
         transition: .5s;
 
         .resume-title {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 96px;
+            height: 80px;
             pointer-events: auto;
             padding-inline: 24px;
             cursor: pointer;
@@ -283,11 +286,12 @@
 
     .resume-footer {
         display: flex;
+        align-items: center;
         flex-direction: row-reverse;
         background-color: white;
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         border-radius: 1em;
-        padding-block: 24px;
+        height: 80px;
         padding-inline: 48px;
         position: sticky;
         bottom: 0px;
@@ -333,6 +337,130 @@
                 font-weight: 800;
             }
         }
+    }
+
+    .add-section {
+
+        .add-sect-cta {
+            .add-sect-btn {
+                margin: auto;
+                display: flex;
+                gap: 8px;
+                align-items: center;
+                justify-content: center;
+                width: 280px;
+                height: 60px;
+                border-radius: 2em;
+                color: $txt-color;
+                @include btn($brand-color, $secondary-brand-color);
+
+                p {
+                    font-weight: 800;
+                }
+
+                span {
+                    svg {
+                        scale: 1.4;
+                        fill: $txt-color;
+                    }
+                }
+            }
+        }
+
+        .modal-container {
+
+            .black-screen {
+                width: 100%;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.397);
+                position: fixed;
+                top: 0;
+                left: 0;
+            }
+
+            .add-sect-modal {
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                z-index: 50;
+                width: 80%;
+                background-color: white;
+                padding: 40px;
+                border-radius: 1em;
+
+                .add-modal-header {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+
+                    h1 {
+                        font-weight: 800;
+                        font-size: rem(36px);
+                    }
+
+                    span {
+                        cursor: pointer;
+
+                        svg {
+                            scale: 2;
+                        }
+                    }
+                }
+
+                .modal-content-list {
+                    display: grid;
+                    gap: 18px;
+                    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+                    padding-top: 24px;
+
+                    .modal-content-preview {
+                        cursor: pointer;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        padding-inline: 18px;
+                        padding-block: 24px;
+                        background-color: darken(white, 8%);
+                        border-radius: 1em;
+                        height: 120px;
+                        transition: .2s;
+
+                        .preview-header {
+                            display: flex;
+                            align-items: center;
+                            gap: 8px;
+
+                            p {
+                                font-weight: 800;
+                            }
+
+                            span {
+                                svg {
+                                    fill: $primary-color;
+                                }
+                            }
+                        }
+
+                        .preview-desc {
+                            p {
+                                margin-top: 6px;
+                                line-height: 1.2;
+                                color: lighten(black, 45%);
+                            }
+                        }
+
+                        &:hover {
+                            scale: 1.02;
+                        }
+                    }
+                }
+
+            }
+
+
+        }
+
     }
 
 
