--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -16,6 +16,7 @@
 
 // Components
 @import 'components/modal';
+@import 'components/user-msg';
 @import 'components/resume-form';
 @import 'components/auth-form';
 
