--- a/src/assets/scss/components/_auth-form.scss
+++ b/src/assets/scss/components/_auth-form.scss
@@ -74,8 +74,14 @@
 	}
 
 	.sub-checkbox {
+		cursor: pointer;
 		display: flex;
 		column-gap: 1rem;
+
+		label,
+		input {
+			cursor: pointer;
+		}
 
 		@include hover {
 			opacity: 0.7;
@@ -102,8 +108,10 @@
 	}
 
 	.form-submit {
+
 		margin: auto;
-		padding: 1.5rem 2rem;
+		width: 220px;
+		height: 60px;
 		border-radius: 2em;
 		font-weight: 700;
 		font-size: rem(16px);
