--- a/src/assets/scss/views/_home-page.scss
+++ b/src/assets/scss/views/_home-page.scss
@@ -14,7 +14,12 @@
 			width: 100%;
 
 			.login-btn {
-				padding: 0.5rem 1.5rem;
+				display: flex;
+				gap: 12px;
+				justify-content: center;
+				align-items: center;
+				height: 45px;
+				width: 150px;
 				border-radius: 2em;
 				font-weight: 700;
 				font-size: rem(16px);
