--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -13,7 +13,8 @@ $secondary-brand-color: #fc6767;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
-$narrow-breakpoint: 720px;
+$narrow-breakpoint: 860px;
+$middle-breakpoint: 1080px;
 $normal-breakpoint: 1440px;
 $wide-breakpoint: 1800px;
 
